--- a/demowebapp/pom.xml
+++ b/demowebapp/pom.xml
@@ -13,6 +13,11 @@
       <version>6.0</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.12</version>
+    </dependency>
   </dependencies>
 
   <build>
